--- a/tools/migrator/package.json
+++ b/tools/migrator/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "generic-pool": "2.x.x",
-    "mysql": "2.x.x",
+    "mysql": "2.17.1",
     "node-cubrid": "1.x.x",
     "q": "^1.5.0"
   },
